@@ -47,6 +47,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collections
 import|;
 end_import
@@ -57,6 +66,15 @@ operator|.
 name|util
 operator|.
 name|HashMap
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
 import|;
 end_import
 begin_import
@@ -629,6 +647,79 @@ name|info
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|/**    * Check if any of the mentioned names are missing. If yes, return the Set of missing names    */
+DECL|method|checkContains
+specifier|public
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|checkContains
+parameter_list|(
+name|Collection
+argument_list|<
+name|String
+argument_list|>
+name|names
+parameter_list|)
+block|{
+if|if
+condition|(
+name|names
+operator|==
+literal|null
+operator|||
+name|names
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+return|return
+name|Collections
+operator|.
+name|EMPTY_SET
+return|;
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+name|result
+init|=
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|s
+range|:
+name|names
+control|)
+if|if
+condition|(
+operator|!
+name|this
+operator|.
+name|registry
+operator|.
+name|containsKey
+argument_list|(
+name|s
+argument_list|)
+condition|)
+name|result
+operator|.
+name|add
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+return|return
+name|result
+return|;
 block|}
 DECL|method|createPlugin
 name|PluginHolder
